--- a/typo3/sysext/extensionmanager/Resources/Public/Css/main.css
+++ b/typo3/sysext/extensionmanager/Resources/Public/Css/main.css
@@ -26,7 +26,7 @@
       background: white;
       color: black;
       border-bottom: 0;
-      padding-top: 8px;
+      padding-top: 4px;
       cursor: default; }
     #typo3-extension-main-menu .tabs ul > li a,
     #typo3-extension-configuration-forms .tabs ul > li a {
@@ -34,9 +34,9 @@
       -moz-border-radius: 4px 4px 0 0;
       border-radius: 4px 4px 0 0;
       float: left;
-      height: 15px;
+      height: 22px;
       background: #dadada;
-      padding: 7px 15px;
+      padding: 4px 15px;
       margin-top: -1px;
       margin-right: 2px;
       border: 1px solid #adadad;
